salesforce_sfdx/main/default/objects/OSFMX_InjectionNode__c/OSFMX_InjectionNode__c.object-meta.xml
<CustomObject>
    <label>Nodo de inyección</label>
    <nameField>
        <label>Nodo de inyección</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nodos de inyección</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>