salesforce_sfdx/main/default/objects/OSFMX_InjectionNode__c/fields/OSFMX_Code__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Code__c</fullName>
    <externalId>true</externalId>
    <label>Clave</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>