salesforce_sfdx/main/default/objects/OSFMX_InjectionNode__c/fields/OSFMX_LoadingArea__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LoadingArea__c</fullName>
    <label>Zona de carga</label>
    <length>200</length>
    <type>Text</type>
</CustomField>