salesforce_sfdx/main/default/objects/OSFMX_InjectionNode__c/fields/OSFMX_RegionalControlCenter__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RegionalControlCenter__c</fullName>
    <label>Centro de control regional</label>
    <type>TextArea</type>
</CustomField>