salesforce_sfdx/main/default/objects/OSFMX_InjectionNode__c/fields/OSFMX_System__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_System__c</fullName>
    <label>Sistema</label>
    <length>200</length>
    <type>Text</type>
</CustomField>