salesforce_sfdx/main/default/objects/OSFMX_InjectionNode__c/fields/OSFMX_VoltageLevel__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_VoltageLevel__c</fullName>
    <label>Nivel de tensión</label>
    <length>200</length>
    <type>Text</type>
</CustomField>